# getMac

./: CMakeLists.txt  arper.cpp  arper.h  dialog.cpp  dialog.h
